@@ -29,8 +29,8 @@ return {
 		script = "Units/ARMDFLY.cob",
 		seismicsignature = 0,
 		selfdestructas = "hugeExplosionGenericSelfd",
-		sightdistance = 318,
-		speed = 241.5,
+		sightdistance = 430,
+		speed = 225,
 		stealth = true,
 		transportcapacity = 1,
 		transportsize = 4,
