@@ -144,7 +144,7 @@ return {
 				weaponvelocity = 920,
 				damage = {
 					default = 116,
-					vtol = 58,
+					vtol = 22,
 				},
 			},
 		},
