@@ -29,7 +29,7 @@ return {
 		seismicsignature = 0,
 		selfdestructas = "hugeExplosionGenericSelfd",
 		sightdistance = 500,
-		speed = 235,
+		speed = 200,
 		transportcapacity = 1,
 		transportsize = 4,
 		transportunloadmethod = 0,
