@@ -29,7 +29,7 @@ return {
 		script = "Units/CORCA.cob",
 		seismicsignature = 0,
 		selfdestructas = "smallExplosionGenericSelfd",
-		sightdistance = 351,
+		sightdistance = 430,
 		speed = 201,
 		terraformspeed = 225,
 		turninplaceanglelimit = 360,
